--- a/SM-front/SM/src/app/home/home.component.html
+++ b/SM-front/SM/src/app/home/home.component.html
@@ -1,4 +1,4 @@
 <div class="main">
   <h1> Welcome to Simple Muscles web site!</h1>
-  <div class="start"><a routerLink="/login"> Get Started</a></div>
+  <a class = "start" routerLink="/login"><div>Get Started</div></a>
 </div>
