--- a/SM-front/SM/src/app/nav-bar/nav-bar.component.html
+++ b/SM-front/SM/src/app/nav-bar/nav-bar.component.html
@@ -4,7 +4,7 @@
     <li><a routerLink="home">Home</a></li>
     <li><a routerLink="about">About Us</a></li>
     <li><a routerLink="/categories">Categories</a></li>
-    <li class="login"><a routerLink="login">Login</a></li>
+    <li class="login"><a routerLink="/login">Login</a></li>
     <li class="register"><a routerLink="/profile"><i class = "material-icons">person</i></a></li>
   </ul>
 </nav>
