--- a/SM-front/SM/src/app/exercises/exercises.component.html
+++ b/SM-front/SM/src/app/exercises/exercises.component.html
@@ -2,8 +2,8 @@
   <div class="exercises" *ngFor = "let exercise of exercises">
     <div class="category">
       <a class ="link" routerLink="{{exercise.id}}"><i>{{exercise.name}}</i></a>
-      <a><video controls autoplay src="{{exercise.url}}"></video></a>
-      <button (click)="addToFavorite(exercise.id)"> Add to favorite</button>
+      <a><img src="{{exercise.url}}" alt="" class ="img"></a>
+      <button (click)="addToFavorite(exercise.id)" class = "favorite-button"> Add to favorite</button>
 <!--      <span (click)="isFavorite(exercise)" class ="favorite {{exercise.favorite?'':'not'}}">♥</span>-->
     </div>
   </div>
