--- a/SM-front/SM/src/app/exercises/exercises.component.css
+++ b/SM-front/SM/src/app/exercises/exercises.component.css
@@ -1,6 +1,3 @@
-.category video{
-  width: 550px;
-}
 .category i{
   font-size: 24px;
 }
@@ -38,4 +35,17 @@
 }
 .link:hover{
   text-decoration: underline;
+}
+.img{
+  width: 500px;
+}
+.favorite-button{
+  border-radius: 5px;
+  border:none;
+  background-color: grey;
+  color:white;
+  height: 20px;
+}
+.favorite-button:hover{
+  background-color: darkgreen;
 }
