--- a/SM-front/SM/src/app/about/about.component.html
+++ b/SM-front/SM/src/app/about/about.component.html
@@ -1,1 +1,37 @@
-<p>about works!</p>
+<p>Project minimum requirements <br>
+
+  <b>Front End <br></b>
+  All needed interfaces / classes for APIs from back-end<br>
+  All needed services for getting data from API<br>
+  Minimum 4 (onclick) events, which hits API<br>
+  Minimum 4 [(ngModel)]<br>
+  Minimum CSS styling<br>
+  Configured Routing module<br>
+  Usage of directives: ngFor, ngIf<br>
+  JWT based authentication<br>
+  interceptor<br>
+  login<br>
+  logout<br>
+
+ <b> Back End<br></b>
+  Minimum 4 models<br>
+  Minimum 1 model Manager (optional)<br>
+  Minimum 2 relations between models (ForeignKey)<br>
+  Serializer<br>
+  at least 2 from serializer.Serializer<br>
+  at least 2 serializer from serializer.ModelSerializer<br>
+  Views<br>
+  at least 2 FBV drf view<br>
+  at least 2 CBV APIView<br>
+  Token based authentication<br>
+  login<br>
+  logout<br>
+  At least for 1 model CRUD operations<br>
+  create objects with authenticated user (Ex: Tasks for current authenticated user)<br>
+  Postman requests with all implemented methods<br>
+
+
+
+
+  GOOD LUCK :)<br>
+</p>
