--- a/SM-front/SM/src/app/exercises/exercises.component.html
+++ b/SM-front/SM/src/app/exercises/exercises.component.html
@@ -3,7 +3,7 @@
     <div class="category">
       <a class ="link" routerLink="{{exercise.id}}"><i>{{exercise.name}}</i></a>
       <a><img src="{{exercise.url}}" alt="" class ="img"></a>
-      <button (click)="addToFavorite(exercise.id)" class = "favorite-button"> Add to favorite</button>
+<!--      <button (click)="addToFavorite(exercise.id)" class = "favorite-button"> Add to favorite</button>-->
 <!--      <span (click)="isFavorite(exercise)" class ="favorite {{exercise.favorite?'':'not'}}">♥</span>-->
     </div>
   </div>
