--- a/SM-front/SM/src/app/home/home.component.css
+++ b/SM-front/SM/src/app/home/home.component.css
@@ -3,7 +3,6 @@
   border:1px solid;
   height: 800px;
   width:100%;
-  background-image:url("/assets/bg.jpg");
   background-position: center;
   background-repeat: no-repeat;
   display: flex;
@@ -15,7 +14,7 @@
   background-color: #3e8e41;
 }
 .main h1{
-  color: white;
+  color: black;
   font-size: 32px;
   font-weight: bold;
   margin-right: 20px;
