--- a/SM-front/SM/src/app/categories/categories.component.css
+++ b/SM-front/SM/src/app/categories/categories.component.css
@@ -5,7 +5,6 @@
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-between;
-  background-image: url("/assets/bg-2.jpg");
 }
 .categories{
   margin:10px;
@@ -25,7 +24,7 @@
   width : 200px;
 }
 .category i{
-  color:white;
+  color:black;
   font-weight: bold;
 }
 .inf {
@@ -34,7 +33,7 @@
   justify-content: center;
 }
 .inf h1{
-  color:white;
+  color:black;
   font-size: 45px;
 }
 .inf h1:hover{
