--- a/SM-front/SM/src/app/profile/profile.component.css
+++ b/SM-front/SM/src/app/profile/profile.component.css
@@ -59,10 +59,6 @@ a:hover {
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: 1px solid;
-}
-.name{
-  border: 1px solid;
 }
 .favorite{
   font-size: 40px;
@@ -115,4 +111,17 @@ a:hover {
 }
 .remove-btn:hover{
   background-color: red;
+}
+.img {
+  width: 400px;
+}
+.action{
+  border-radius: 5px;
+  background-color: rebeccapurple;
+  border:none;
+  color:white;
+  width: 80px;
+  margin: 20px;
+  height: 50px;
+  font-size: 18px;
 }
