--- a/SM-front/SM/src/app/profile/profile.component.html
+++ b/SM-front/SM/src/app/profile/profile.component.html
@@ -1,23 +1,34 @@
 <ng-container *ngIf="logged">
   <main>
     <section class="user-info">
-      <h2>{{user.username}}'s Information</h2>
+      <h2>{{user.username}}'s information</h2>
       <p><b>Name</b>: {{user.first_name}} {{user.last_name}} </p>
       <p><b>Email</b>: {{user.email}}</p>
-      <button (click)="logout()" class="logout"> Log out</button>
     </section>
 
     <section class="user-activity">
-      <h2>{{user.username}} Favorites</h2>
+      <h2>Favorites</h2>
       <div class="main">
         <div *ngFor = "let exercise of favoriteExercises" class="exercises">
-            <div class="name"> <a routerLink="/categories/{{exercise.categoryId}}/{{exercise.id}}"><h2>{{exercise.name}}</h2></a></div>
-            <button (click)="remove(exercise.id)" class = "remove-btn"> Remove </button>
+            <div class="name"> <a routerLink="/categories/{{exercise.categoryId}}/{{exercise.id}}/"><h2>{{exercise.name}}</h2></a></div>
+          <img src="{{exercise.url}}" alt="" class = "img">
+          <button (click)="remove(exercise.id)" class = "remove-btn"> Remove </button>
         </div>
       </div>
     </section>
   </main>
 </ng-container>
+
+<ng-container *ngIf="user.is_superuser && logged ">
+  <section class="user-activity">
+    <h2>Actions</h2>
+    <div class="main">
+      <button class = "action" routerLink="/create"> Create exercise </button>
+      <button class = "action" routerLink="/update"> Update </button>
+    </div>
+  </section>
+</ng-container>
+
 <ng-container *ngIf="!logged">
   <div class="inf">
     <h1 routerLink="/login">Please log in</h1>
